--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Codey Tundra</title>
     <style>
       canvas {
-        width: 500px;
-      }
+       width: 600px;
+       display: block;
+       margin: 0;
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
     </style>
   </head>
 
